--- a/src/components/MoneyDetails/index.css
+++ b/src/components/MoneyDetails/index.css
@@ -50,7 +50,7 @@
   margin: 0px;
   padding-bottom: 5px;
 }
-.amount {
-  font-size: 40px;
+.display-amount {
+  font-size: 30px;
   margin: 0px;
 }
